# Telebrief

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .vulture  Dockerfile  LICENSE  Makefile  README.md  SPECIFICATION.md  TESTING.md  TESTING_SETUP_SUMMARY.md  config.yaml  config.yaml.example  create_session.py  create_session.sh  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  vulture_whitelist.py
.github/workflows/: ci.yml  docker-publish.yml
docs/adr/: 0001-extensibility-architecture.md
docs/plans/: 2026-02-13-update-website-multi-provider.md  2026-02-21-digest-table-of-contents-navigation.md  2026-02-21-fix-empty-openai-summaries.md  2026-02-21-fix-ollama-summarize-error.md  2026-02-21-fix-toc-links-telegram-desktop.md  2026-02-21-fix-toc-order-and-ui-language.md  2026-02-21-fix-token-limit-truncation.md  2026-02-21-limit-prompt-input-size.md  2026-02-21-reasoning-effort-auto-detect-design.md  2026-02-21-reasoning-effort-auto-detect.md  2026-02-21-retry-on-token-budget-exhausted-design.md  2026-02-21-retry-on-token-budget-exhausted.md  2026-02-22-fix-toc-deep-links.md  2026-02-22-remove-toc-feature.md  2026-02-22-update-website-dark-theme-and-features.md  2026-02-23-fix-website-spacing-and-redesign-claude-badge.md  20260404-digest-mode.md  20260404-prompt-security-hardening.md  20260430-extensibility-architecture.md  20260430-storage-layer.md  fis-openai.md  ollama.md
docs/plans/completed/: 2026-02-13-update-website-multi-provider.md  2026-02-21-digest-table-of-contents-navigation.md  2026-02-21-fix-ollama-summarize-error.md  2026-02-21-fix-toc-links-telegram-desktop.md  2026-02-22-fix-toc-deep-links.md  2026-02-22-remove-toc-feature.md  2026-02-22-update-website-dark-theme-and-features.md  2026-02-23-fix-website-spacing-and-redesign-claude-badge.md  20260404-digest-mode.md  20260404-prompt-security-hardening.md  20260430-storage-layer.md  ollama.md
src/: ai_providers.py  bot_commands.py  collector.py  config_loader.py  core.py  formatter.py  grouper.py  scheduler.py  sender.py  storage.py  summarizer.py  ui_strings.py  utils.py  xml_escape.py
src/extensions/: filters.py  loader.py  prompts.py
src/prompts/: base_summary.txt
tests/: __init__.py  conftest.py  test_ai_providers.py  test_bot_commands.py  test_config_loader.py  test_core.py  test_formatter.py  test_grouper.py  test_sender.py  test_storage.py  test_summarizer.py  test_ui_strings.py  test_utils.py  test_xml_escape.py
tests/extensions/: test_filters.py  test_loader.py  test_prompts.py
website/: .cloudflare-pages.toml  .gitignore  DEPLOYMENT.md  README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc  wrangler.toml
website/src/layouts/: Layout.astro
website/src/pages/: index.astro
website/src/styles/: global.css
